--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,8 +18,8 @@ set -g pane-base-index 1
 
 set -g window-status-current-style "bg=#fe8019,fg=#1d2021"
 set -g window-status-separator ''
-set -g window-status-format " #{?window_start_flag,, }#I:#W#{?window_flags,#F, } "
-set -g window-status-current-format " #{?window_start_flag,, }#I:#W#{?window_flags,#F, } "
+set -g window-status-format " #{?window_start_flag,, }#I:#W #{b:pane_current_path} #{?window_flags,#F, } "
+set -g window-status-current-format " #{?window_start_flag,, }#I:#W #{b:pane_current_path} #{?window_flags,#F, } "
 
 run '~/.tmux/plugins/tpm/tpm'
 
