--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
-
-set -g status-style 'bg=#282828 fg=#ebdbb2'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'jamesoff/tmux-loadavg'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 unbind C-b
 set-option -g prefix C-a
@@ -16,10 +17,18 @@ set -g status-position top
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g window-status-current-style "bg=#fe8019,fg=#1d2021"
-set -g window-status-separator ''
-set -g window-status-format " #{?window_start_flag,, }#I:#W #{b:pane_current_path} #{?window_flags,#F, } "
-set -g window-status-current-format " #{?window_start_flag,, }#I:#W #{b:pane_current_path} #{?window_flags,#F, } "
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator " | "
+
+set -g @catppuccin_window_default_fill "none"
+
+set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_user_text "#U"
+set -g @catppuccin_status_modules_right "application user host"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
 
 run '~/.tmux/plugins/tpm/tpm'
 
