--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,17 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+bind-key 0 if-shell "true" "select-window -t :0" \; refresh-client -S
+bind-key 1 if-shell "true" "select-window -t :1" \; refresh-client -S
+bind-key 2 if-shell "true" "select-window -t :2" \; refresh-client -S
+bind-key 3 if-shell "true" "select-window -t :3" \; refresh-client -S
+bind-key 4 if-shell "true" "select-window -t :4" \; refresh-client -S
+bind-key 5 if-shell "true" "select-window -t :5" \; refresh-client -S
+bind-key 6 if-shell "true" "select-window -t :6" \; refresh-client -S
+bind-key 7 if-shell "true" "select-window -t :7" \; refresh-client -S
+bind-key 8 if-shell "true" "select-window -t :8" \; refresh-client -S
+bind-key 9 if-shell "true" "select-window -t :9" \; refresh-client -S
+
 set -g status-position top
 set -g base-index 1
 set -g pane-base-index 1
@@ -25,7 +36,7 @@ set -g @catppuccin_window_default_fill "none"
 
 set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_user_text "#U"
+set -g @catppuccin_user_text ""
 set -g @catppuccin_status_modules_right "application user host"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
