--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,14 @@
+[shell]
+program = "/bin/zsh"
+
 [font]
-size = 12.0
+# Alacritty handles font size on macOS and X11/Wayland a bit differentely
+
+# Linux
+# size = 12.0
+
+# macOS
+size = 15.0
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
