--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -87,6 +87,7 @@ PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 # You can uncomment this line to open up terminal with alt + enter shortcut
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
 alt-enter = 'exec-and-forget open -n /Applications/Alacritty.app'
+alt-shift-enter = 'exec-and-forget open -n /Applications/Firefox.app'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
