Integrate SketchyBar with AeroSpace for enhanced workspace management, update Alacritty configuration for borderless window, and add new status plugins for battery, volume, clock, and active application tracking.

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,10 @@
 [shell]
 program = "/bin/zsh"
 
+[window]
+
+decorations = "None"
+
 [font]
 # Alacritty handles font size on macOS and X11/Wayland a bit differentely
 
