Add curl, docker credential helper, NSS, s3cmd, and borders to Brewfile; configure borders in aerospace and update window decorations in alacritty

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -3,7 +3,11 @@ program = "/bin/zsh"
 
 [window]
 
-decorations = "None"
+decorations = "buttonless"
+
+[window.padding]
+x = 8
+y = 8
 
 [font]
 # Alacritty handles font size on macOS and X11/Wayland a bit differentely
