--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -19,6 +19,7 @@ after-login-command = []
 after-startup-command = [
     'exec-and-forget /opt/homebrew/opt/sketchybar/bin/sketchybar',
     'exec-and-forget /opt/homebrew/opt/sketchybar/bin/sketchybar --reload',
+    'exec-and-forget /opt/homebrew/opt/borders/bin/borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
 ]
 
 # Notify Sketchybar about workspace change
