Enable nested container normalization and fix Slack notification count retrieval in sketchybar plugin

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -32,7 +32,7 @@ start-at-login = true
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = false
-enable-normalization-opposite-orientation-for-nested-containers = false
+ enable-normalization-opposite-orientation-for-nested-containers = false
 
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
@@ -50,7 +50,7 @@ default-root-container-orientation = 'auto'
 # Visual indent makes it easier to understand that containers of the same orientation are nested.
 # If you have 'enable-normalization-opposite-orientation-for-nested-containers' enabled then
 # there is no way to observe the indent
-indent-for-nested-containers-with-the-same-orientation = 30
+# indent-for-nested-containers-with-the-same-orientation = 30
 
 # Possible values: (qwerty|dvorak)
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
