--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 
+setw -g mouse on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
