feat(config): add Tokyo Night theme and optimize terminal tools

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -41,28 +41,44 @@ y = 8
 # Colors (iTerm 2 default theme)
 
 # Default colors
+# TokyoNight Alacritty Colors
+# Default colors
 [colors.primary]
-background = '#101421'
-foreground = '#fffbf6'
+background = '#1a1b26'
+foreground = '#c0caf5'
+
+#[colors.cursor]
+#cursor = '#c0caf5'
+#text = '#1a1b26'
 
 # Normal colors
 [colors.normal]
-black   = '#2e2e2e'
-red     = '#eb4129'
-green   = '#abe047'
-yellow  = '#f6c744'
-blue    = '#47a0f3'
-magenta = '#7b5cb0'
-cyan    = '#64dbed'
-white   = '#e5e9f0'
+black = '#15161e'
+red = '#f7768e'
+green = '#9ece6a'
+yellow = '#e0af68'
+blue = '#7aa2f7'
+magenta = '#bb9af7'
+cyan = '#7dcfff'
+white = '#a9b1d6'
 
 # Bright colors
 [colors.bright]
-black   = '#565656'
-red     = '#ec5357'
-green   = '#c0e17d'
-yellow  = '#f9da6a'
-blue    = '#49a4f8'
-magenta = '#a47de9'
-cyan    = '#99faf2'
-white   = '#ffffff'
+black = '#414868'
+red = '#f7768e'
+green = '#9ece6a'
+yellow = '#e0af68'
+blue = '#7aa2f7'
+magenta = '#bb9af7'
+cyan = '#7dcfff'
+white = '#c0caf5'
+
+# Indexed Colors
+[[colors.indexed_colors]]
+index = 16
+color = '#ff9e64'
+
+[[colors.indexed_colors]]
+index = 17
+color = '#db4b4b'
+
