--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'jamesoff/tmux-loadavg'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
@@ -30,18 +30,9 @@ set -g status-position top
 set -g base-index 1
 set -g pane-base-index 1
 
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
-
-set -g @catppuccin_window_default_fill "none"
-
-set -g @catppuccin_window_current_fill "all"
-
-set -g @catppuccin_user_text ""
-set -g @catppuccin_status_modules_right "application user host"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
+set -g @tokyo-night-tmux_window_id_style none
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 run '~/.tmux/plugins/tpm/tpm'
 
