feat(kitty,tmux): add Kitty terminal configuration and enhance tmux layout

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,5 +34,8 @@ set -g @tokyo-night-tmux_window_id_style none
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 
+set -g pane-border-style 'fg=#3b4261'
+set -g pane-active-border-style 'fg=#7aa2f7'
+
 run '~/.tmux/plugins/tpm/tpm'
 
