--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -100,7 +100,7 @@ PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 
 # You can uncomment this line to open up terminal with alt + enter shortcut
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-alt-enter = 'exec-and-forget open -n /Applications/Alacritty.app'
+alt-enter = 'exec-and-forget kitty ~'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
@@ -185,5 +185,5 @@ run = 'move-node-to-workspace 3'
 if.app-id = 'com.jetbrains.pycharm.ce'
 run = 'move-node-to-workspace 3'
 [[on-window-detected]]
-if.app-id = 'company.thebrowser.Browser'
-run = 'move-node-to-workspace 2'
+if.app-id = 'com.apple.Safari'
+run = 'move-node-to-workspace 4'
