feat(config): optimize terminal settings and add GPG support

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,6 @@
 [shell]
 program = "/bin/zsh"
+args = ["--login"]
 
 [window]
 
@@ -81,4 +82,3 @@ color = '#ff9e64'
 [[colors.indexed_colors]]
 index = 17
 color = '#db4b4b'
-
