--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 setw -g mouse on
 
@@ -38,4 +38,3 @@ set -g pane-border-style 'fg=#3b4261'
 set -g pane-active-border-style 'fg=#7aa2f7'
 
 run '~/.tmux/plugins/tpm/tpm'
-
