--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -191,5 +191,8 @@ run = 'move-node-to-workspace 4'
 if.app-id = 'org.mozilla.firefox'
 run = 'move-node-to-workspace 4'
 [[on-window-detected]]
+if.app-id = 'com.brave.Browser'
+run = 'move-node-to-workspace 4'
+[[on-window-detected]]
 if.app-id = 'com.mitchellh.ghostty'
 run = 'move-node-to-workspace 1'
