--- a/ghostty/config
+++ b/ghostty/config
@@ -4,5 +4,6 @@ window-padding-y=16,16
 font-family=JetBrainsMono Nerd Font Mono
 font-size=15
 shell-integration-features=no-cursor
-background=#1a1b26
+theme=flexoki-dark
+background=#1C1B1A
 macos-option-as-alt = true
