feat(nvim): enhance configuration and add Lua development support
Add neodev.nvim for improved Neovim Lua development, refactor LSP setup,
and optimize plugin configurations for better performance and maintainability

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -39,46 +39,43 @@ style = "Regular"
 x = 0
 y = 8
 
-# Colors (iTerm 2 default theme)
-
-# Default colors
-# TokyoNight Alacritty Colors
-# Default colors
-[colors.primary]
-background = '#1a1b26'
-foreground = '#c0caf5'
-
-#[colors.cursor]
-#cursor = '#c0caf5'
-#text = '#1a1b26'
-
-# Normal colors
-[colors.normal]
-black = '#15161e'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#a9b1d6'
-
-# Bright colors
+# Flexoki Dark
 [colors.bright]
-black = '#414868'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#c0caf5'
+black = "0x100F0F"
+blue = "0x4385BE"
+cyan = "0x3AA99F"
+green = "0x879A39"
+magenta = "0xCE5D97"
+red = "0xD14D41"
+white = "0xFFFCF0"
+yellow = "0xD0A215"
 
-# Indexed Colors
-[[colors.indexed_colors]]
-index = 16
-color = '#ff9e64'
+[colors.cursor]
+cursor = "0xFFFCF0"
+text = "0xFFFCF0"
 
-[[colors.indexed_colors]]
-index = 17
-color = '#db4b4b'
+[colors.dim]
+black = "0x100F0F"
+blue = "0x205EA6"
+cyan = "0x24837B"
+green = "0x66800B"
+magenta = "0xA02F6F"
+red = "0xAF3029"
+white = "0xFFFCF0"
+yellow = "0xAD8301"
+
+[colors.normal]
+black = "0x100F0F"
+blue = "0x205EA6"
+cyan = "0x24837B"
+green = "0x66800B"
+magenta = "0xA02F6F"
+red = "0xAF3029"
+white = "0xFFFCF0"
+yellow = "0xAD8301"
+
+[colors.primary]
+background = "0x282726"
+bright_foreground = "0xFFFCF0"
+dim_foreground = "0xFFFCF0"
+foreground = "0xFFFCF0"
