--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,11 +3,14 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 setw -g mouse on
 
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'jamesoff/tmux-loadavg'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
