--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,6 +29,15 @@ bind-key 7 if-shell "true" "select-window -t :7" \; refresh-client -S
 bind-key 8 if-shell "true" "select-window -t :8" \; refresh-client -S
 bind-key 9 if-shell "true" "select-window -t :9" \; refresh-client -S
 
+bind-key -r -T prefix       M-Up              resize-pane -U 5
+bind-key -r -T prefix       M-Down            resize-pane -D 5
+bind-key -r -T prefix       M-Left            resize-pane -L 5
+bind-key -r -T prefix       M-Right           resize-pane -R 5
+bind-key -r -T prefix       C-Up              resize-pane -U
+bind-key -r -T prefix       C-Down            resize-pane -D
+bind-key -r -T prefix       C-Left            resize-pane -L
+bind-key -r -T prefix       C-Right           resize-pane -R
+
 set -g status-position top
 set -g base-index 1
 set -g pane-base-index 1
