lnk: sync configuration files

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,7 +4,7 @@ window-padding-y=16,16
 font-family=JetBrainsMono Nerd Font Mono
 font-size=15
 shell-integration-features=no-cursor
-theme=flexoki-dark
+theme="Flexoki Dark"
 background=#1C1B1A
 macos-option-as-alt = true
 shell-integration-features = sudo
