--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,4 +1,5 @@
 {
+  "buffer_font_family": "JetBrainsMono Nerd Font Mono",
   "outline_panel": {
     "dock": "right"
   },
@@ -45,5 +46,10 @@
     "show_close_button": "hover",
     "activate_on_close": "history",
     "show_diagnostics": "errors"
+  },
+  "languages": {
+    "PHP": {
+      "language_servers": ["phpactor"]
+    }
   }
 }
