--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,83 +1,190 @@
-# ╔══════════════════════════════════════════════════════════╗
-# ║                   STARSHIP CONFIG (YAR)                  ║
-# ╚══════════════════════════════════════════════════════════╝
-format = """
-$directory\
-$git_branch\
-$git_status\
-$golang\
-$aws\
-$line_break\
-$character"""
-
-right_format = "$time"
-
-add_newline = false
-
-# ╭───────────────────────────────╮
-# │ Directory                     │
-# ╰───────────────────────────────╯
-[directory]
-style = "cyan bold"
-truncation_length = 3
-truncate_to_repo = true
-read_only = " "  # nf-mdi-lock
-
-# ╭───────────────────────────────╮
-# │ Git Branch & Status           │
-# ╰───────────────────────────────╯
-[git_branch]
-symbol = " "  # nf-dev-git_branch
-style = "bold purple"
-format = "[$symbol$branch]($style) "
-
-[git_status]
-style = "bold yellow"
-format = "[($all_status$ahead_behind)]($style) "
-conflicted = ""   # nf-cod-git_conflict
-ahead = ""        # nf-fa-arrow_up
-behind = ""       # nf-fa-arrow_down
-diverged = ""     # nf-mdi-source_branch
-untracked = ""    # nf-fa-question_circle
-stashed = ""      # nf-cod-archive
-modified = ""     # nf-oct-diff_modified
-staged = ""       # nf-fa-plus_circle
-renamed = ""      # nf-oct-diff_renamed
-deleted = ""      # nf-fa-minus_circle
-
-# ╭───────────────────────────────╮
-# │ Go                            │
-# ╰───────────────────────────────╯
-[golang]
-symbol = " "  # nf-dev-go
-style = "blue bold"
-
-# ╭───────────────────────────────╮
-# │ AWS Profile (SSO aware)       │
-# ╰───────────────────────────────╯
 [aws]
-symbol = " "  # nf-weather-cloud
-style = "bold yellow"
-format = "[$symbol($profile)]($style) "
-force_display = true
+symbol = "  "
 
-# ╭───────────────────────────────╮
-# │ Character (Prompt Symbol)     │
-# ╰───────────────────────────────╯
-[character]
-success_symbol = "[❯](bold green)"
-error_symbol = "[❯](bold red)"
-vicmd_symbol = "[❮](bold cyan)"
+[buf]
+symbol = " "
 
-# ╭───────────────────────────────╮
-# │ Custom tweaks                 │
-# ╰───────────────────────────────╯
-[cmd_duration]
-disabled = true
-min_time = 1500
-format = "  [$duration](dimmed)"  # nf-fa-hourglass
+[bun]
+symbol = " "
 
-[time]
-disabled = false
-format = " [$time]($style)"       # nf-fa-clock
-style = "dimmed white"
+[c]
+symbol = " "
+
+[cpp]
+symbol = " "
+
+[cmake]
+symbol = " "
+
+[conda]
+symbol = " "
+
+[crystal]
+symbol = " "
+
+[dart]
+symbol = " "
+
+[deno]
+symbol = " "
+
+[directory]
+read_only = " 󰌾"
+
+[docker_context]
+symbol = " "
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[fennel]
+symbol = " "
+
+[fossil_branch]
+symbol = " "
+
+[gcloud]
+symbol = "  "
+
+[git_branch]
+symbol = " "
+
+[git_commit]
+tag_symbol = '  '
+
+[golang]
+symbol = " "
+
+[guix_shell]
+symbol = " "
+
+[haskell]
+symbol = " "
+
+[haxe]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[hostname]
+ssh_symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[kotlin]
+symbol = " "
+
+[lua]
+symbol = " "
+
+[memory_usage]
+symbol = "󰍛 "
+
+[meson]
+symbol = "󰔷 "
+
+[nim]
+symbol = "󰆥 "
+
+[nix_shell]
+symbol = " "
+
+[nodejs]
+symbol = " "
+
+[ocaml]
+symbol = " "
+
+[os.symbols]
+Alpaquita = " "
+Alpine = " "
+AlmaLinux = " "
+Amazon = " "
+Android = " "
+Arch = " "
+Artix = " "
+CachyOS = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Garuda = "󰛓 "
+Gentoo = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
+Kali = " "
+Linux = " "
+Mabox = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+Nobara = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+RockyLinux = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
+Void = " "
+Windows = "󰍲 "
+
+[package]
+symbol = "󰏗 "
+
+[perl]
+symbol = " "
+
+[php]
+symbol = " "
+
+[pijul_channel]
+symbol = " "
+
+[pixi]
+symbol = "󰏗 "
+
+[python]
+symbol = " "
+
+[rlang]
+symbol = "󰟔 "
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = "󱘗 "
+
+[scala]
+symbol = " "
+
+[swift]
+symbol = " "
+
+[zig]
+symbol = " "
+
+[gradle]
+symbol = " "
