lnk: sync configuration files

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -55,5 +55,15 @@
     "PHP": {
       "language_servers": ["phpactor"]
     }
+  },
+  "lsp": {
+    "tailwindcss-language-server": {
+      "settings": {
+        "classFunctions": ["cva", "cx"],
+        "experimental": {
+          "classRegex": ["[cls|className]\\s\\:\\=\\s\"([^\"]*)"]
+        }
+      }
+    }
   }
 }
